whitespace problem solved

--- a/styles.css
+++ b/styles.css
@@ -7,6 +7,15 @@
 
 /* PAGE WIDE STYLES */
 
+html,body
+{
+    width: 100%;
+    height: 100%;
+    margin: 0px;
+    padding: 0px;
+    overflow-x: hidden; 
+}
+
 html {
 	font-size: 10px;
 }
